@@ -27,7 +27,10 @@
  * \file
  * Contains definitions for the SCSI bus class.
  *
- * $Id: SCSIBus.cpp,v 1.1 2008/01/12 12:46:43 iamcamiel Exp $
+ * $Id: SCSIBus.cpp,v 1.2 2008/02/16 13:02:58 iamcamiel Exp $
+ *
+ * X-1.2        Camiel Vanderhoeven                             16-FEB-2008
+ *      Owner of the SCSI bus is allowed to re-arbitrate for it.
  *
  * X-1.1        Camiel Vanderhoeven                             12-JAN-2008
  *      Initial version in CVS.
@@ -93,14 +96,14 @@ void CSCSIBus::scsi_unregister(CSCSIDevice * dev, int target)
  **/
 bool CSCSIBus::arbitrate(int initiator)
 {
- if (state.phase != SCSI_PHASE_FREE)
+  if (state.phase != SCSI_PHASE_FREE && state.initiator != initiator)
   {
     printf("Could not arbitrate for the SCSI bus.\n");
     return false;
   }
- state.initiator = initiator;
- state.phase = SCSI_PHASE_ARBITRATION;
- return true;
+  state.initiator = initiator;
+  state.phase = SCSI_PHASE_ARBITRATION;
+  return true;
 }
 
 /**
